# Advanced_HPC_Exam

./: CMakeLists.txt  README.md  columns_cpu.csv  generate_files.sh  generate_files_cpu.sh  generate_files_gpu.sh  jacobi.c  launcher.sh  launcher_cpu.sh  launcher_gpu.sh  plots.Rmd  run.sh  test_cpu.c  test_gpu.c  timings_cpu.csv  timings_gpu.csv
